@@ -69,10 +69,12 @@ Changes in 2.8
 - check accept cookies in index.php
 - regenerate session ID on login in index.php
 - Bugfix user wrongly excluded from poll in PortalPollNotes.fnc.php
+- Remove functions/GetPeriod.fnc.php file
 - Add Italian, Japanese, Portuguese, Russian, Turkish, Chinese, Bengali, Korean, Persian locales
 
 Upgrade from 2.7.x & 2.8-betax
 ------------------------------
+- Remove functions/GetPeriod.fnc.php file
 - Extract the 2.8 files
 - Execute the SQL commands, see https://gist.github.com/francoisjacquet/b451c8006d5e1978fb0d
 - Note: you can activate Registration via School Setup > School Configuration
